# GradioCustomGallery

./: PKG-INFO  README.md  gradio_htmlgallery-0.0.1-py3-none-any.whl  pyproject.toml
backend/gradio_htmlgallery/: __init__.py  htmlgallery.py
backend/gradio_htmlgallery/templates/component/: index.js  style.css
demo/: app.py
frontend/: Index.svelte  package-lock.json  package.json
frontend/shared/: HTMLGallery.svelte
