[build-system]
requires = [
  "hatchling",
  "hatch-requirements-txt",
  "hatch-fancy-pypi-readme>=22.5.0",
]
build-backend = "hatchling.build"

[project]
name = "gradio_htmlgallery"
version = "0.0.1"
description = "Gallery component that takes a list of HTML(str) with images as <img> and displays them."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "Gabriel Franke", email = "frankegabriel@gmail.com" }]
keywords = ["gradio-custom-component", "gradio-template-Gallery", "gradio-html-Gallery", "htmlgallery"]
# Add dependencies here
dependencies = ["gradio>=4.0,<5.0"]
classifiers = [
  'Development Status :: 3 - Alpha',
  'License :: OSI Approved :: Apache Software License',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Scientific/Engineering :: Visualization',
]

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.hatch.build]
artifacts = ["/backend/gradio_htmlgallery/templates", "*.pyi", "backend/gradio_htmlgallery/templates", "backend/gradio_htmlgallery/templates"]

[tool.hatch.build.targets.wheel]
packages = ["/backend/gradio_htmlgallery"]
